--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Creator</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="AY7gNH5Zw99XHJ8/x6pSVQ3bii8WRdEd0uW059XylbBI7PTZS4CSWgnm1qVmYH1I6iGT+Ld0PizCVzkWONo3zPW9cFQftBBybhB8WunrUZM+RytfbdMSL7dAnpXFRaFJ" data-form-email="true">
+                    <input type="hidden" value="FbjFtcZIHXzVoo1Sl+7808PrZ5BykY+ZJ99jp76rajEFImo9kFtefoJtVe2Gpen/S/XU7IgOM5B3wBgjljCRFNl64d7Mb2X9USV00jzdtXmwHCXZzXNYtvhuXqhrG7NU" data-form-email="true">
 
                     
 
