--- a/LightRoom.html
+++ b/LightRoom.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4s" style="background-color: rgb(255, 255, 255); padding-top: 100px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -256,7 +256,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="tU/U1ekiRRRFY690Cot8x8VRpfqFxWIZkHlIS/yBEoyQaV4gs5l+KvSplzvfR8vkfVdygdrMFK8yu/pn7DnjVONn0CLD/TToiHYPDX7orB+7AYJPMNgJiTeo60JgPlf5" data-form-email="true">
+                    <input type="hidden" value="XYRADL21TIVua9YQd3I04pBFtOXJsTafx8XuinUhY/+iL9PD2bWBFfrY5qMfK3PnNiZkkdsuwzLyhg8s/P1FrZ1/g94WyDC5A7VsP7o9WWlrd4Wv+LLYqnKFKrFk4WB0" data-form-email="true">
 
                     
 
