--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free wysiwyg web site builder software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple mobile web builder software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="j7YKnkpQU8dNNwjvH7EDI5QnGArmIi/bE8lIWbgjS9CQHdEPKDSQm6GqAPgvz3XuyApWbDibZOhCdi0/zMVPAvFHRUejvrH809bS8mX6xdQaX5cYIqQW/puwr3XSKDV7" data-form-email="true">
+                    <input type="hidden" value="UNj/4CUx8iSrl8EP9KHpVG9UUpxBp6Yq7pXvFqGQh3qs16V7JA6TaeKMFsDc1cmiag/SY2y6hDqA8Xx3oZz8iR/vZP8TGH59gwmNChV05y7109R3S1xhDmPbU2ozs3qK" data-form-email="true">
 
                     
 
