--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg website generator software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">top drag and drop web page development software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="RR6NkfQHqI2RWHP+QjQTkkkKpHQa9uG2sFFNSYDfA28TvYbGa0aUDY5ZVlLUxDUYenALa15E5XyvyY5cNL+ABdmDOkHpEkHY/PFPnWL0YZ0WdEW9VdENITAzdzKwkSsU" data-form-email="true">
+                    <input type="hidden" value="wNyWuPjRRxvKsuSzn0zaaQ5lhErjI3Qx0LYbd0OThmWiHjjIGKMaWnF8WqfTiCjPA3qbCat7Tt4Fxr+EbJDt8U6QCuiC53bGDjtRZ6gnvLKy0jrqJnL7J2slTCdh7mY5" data-form-email="true">
 
                     
 
