--- a/Community Manager.html
+++ b/Community Manager.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple mobile web page building</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">offline web site creator software download</a></section><section class="mbr-footer mbr-section mbr-section-md-padding mbr-after-navbar" id="contacts3-5c" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -102,7 +102,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="ic4NemcZ+luMkg+Gh4wDx2sugEQ5FZubUWHa9V0CGp/kJaGr5ZRfSpgYN2QR2Tef9DN3Cql3tNcwGIhpIGgFg/eHUJb0PvTWNKNaVbQBxy05o8ZVuunQXCWrcrUmgNCI" data-form-email="true">
+                    <input type="hidden" value="5WP1mqyIIqCE/Cmvkjh97ci1Scj6gE+5i+ajpCoUs3/ZoV8mR60V+co5CbIn5/UJAHjGxtQLeNx7Vk1IjeXWPXaIxRvyexXynSyO3ZU3bTEhU8vsn8ZS0fF3HIc5z7B7" data-form-email="true">
 
                     
 
